[package]
name = "spawn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#jemallocator = { version = "0.5" }
clap = { version = "4.4.18", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"

[workspace]

[profile.release]
debug = "line-tables-only"
